jellyfin-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-external-svc
  namespace: arr
spec:
  ports:
  - protocol: TCP
    port: 8096
    targetPort: 8096
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-external-svc
  namespace: arr
subsets:
  - addresses:
      - ip: "192.168.1.12"
    ports:
      - port: 8096
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-external
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.pindaroli.org`)
    kind: Rule
    services:
    - name: jellyfin-external-svc
      port: 8096
    middlewares:
    - name: oauth2-auth
      namespace: traefik
  tls:
    secretName: pindaroli-wildcard-tls
